--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA jupyter nose scipy
+  - travis_retry conda create -n test $CONDA jupyter nose scipy pip
   - source activate test
   - travis_retry pip install coveralls octave_kernel
 
