--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,10 @@ script:
   - which python
   - python -c "import octave_kernel"
   - if [[ $CONDA == python=2.7* ]]; then
+      nosetests --exe -v --with-doctest --with-cov --cover-package oct2py;
       jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=python2 --ExecutePreprocessor.timeout=60 --stdout example/octavemagic_extension.ipynb > /dev/null;
     else
+      nosetests --exe -v oct2py;
       jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=python3 --ExecutePreprocessor.timeout=60 --stdout example/octavemagic_extension.ipynb > /dev/null;
     fi
   - make docs
