--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@
 language: python
 
 env:
-    - CONDA="python=2.7 scipy=0.17.0"
-    - CONDA="python=3.4 numpy scipy"
+    - CONDA="python=2.7 numpy>=1.11 scipy=0.17.0"
+    - CONDA="python=3.4 scipy"
 
 before_install:
   - sudo apt-add-repository -y ppa:picaso/octave;
